Fixing issues on mobile version

--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@
   background: #00474b;
   height: 100%;
   border-radius: 10px;
-  padding: 2rem;
+  padding: 1.5rem;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -217,5 +217,8 @@
   }
   .col-one-half {
     grid-column: span 2;
+  }
+  .button-wrapper input[type="radio"] + label span {
+    padding: 0.75rem 0.5rem;
   }
 }
